# netflix-data-pipeline-example

./: .gitignore  Dockerfile  README.md  docker-compose.yml  initialize_data.sh  pyproject.toml
netflix_dbt/snapshots/dimensions/: titles_dim.yml  users_dim.sql  users_dim.yml
src/: aggregator.py  create_data.py  event_creator.py  load_data.py  model_data.py
src/netflix_data/: dbt_project.yml
src/netflix_dbt/: dbt_project.yml
src/netflix_dbt/macros/: trino_snapshot_utils.sql
src/netflix_dbt/models/: sources.yml
src/netflix_dbt/models/facts/: play_events_fct.sql
src/netflix_dbt/snapshots/dimensions/: titles_dim.sql
trino/: config.properties
trino/catalog/: kafka.properties
trino_configs/catalog/: netflix.properties
